--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,13 @@
     "require": {
         "php": "^8.2",
         "barryvdh/laravel-dompdf": "^3.1",
+        "blade-ui-kit/blade-icons": "^1.8",
         "filament/filament": "^3.0",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.2",
         "laravel/tinker": "^2.10.1",
         "maatwebsite/excel": "^3.1",
+        "mallardduck/blade-lucide-icons": "^1.23",
         "milon/barcode": "^12.0",
         "spatie/laravel-activitylog": "^4.10",
         "spatie/laravel-permission": "^6.21"
